Fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,6 @@ a{
   background-repeat: no-repeat;
   background-size: cover;
   height: fit-content;
-  height: 120vh;
 }
 
 .Terminal-window{
